# usart2-f410

./: .mxproject  BSP_F410.ioc  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake  build.ps1  oldmakefile.txt
Inc/: usart1.hpp  usart2.hpp
Src/: main.c  stm32f4xx_it.c  usart1.cpp  usart2.cpp
